--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Christina Dionysio"
 title_separator          : "-"
 name                     : &name "Christina Dionysio"
-description              : &description "Research Assistant @ TU Berlin"
+description              : &description "Research Assistant @ TU Berlin & BIFOLD"
 url                      : https://christinadionysio.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "christinadionysio/christinadionysio.github.io"
